# real-time-industrial-defect-detection-system

./: .gitignore  FIXES.md  README.md  README_OPTIMIZATION.md  index.html  pyproject.toml  requirements.txt  test_firebase.py  test_webrtc_offer.py
Bottles/fine-tuning/bottle - cap and label- info/: config.py  export_onnx.py  run_all.py  utils.py
Bottles/fine-tuning/bottles/: config.py  quantize_onnx.py  run_all.py  train.py
Bottles/flow/: main.py
Bottles/flow/detector/: yolo_detector.py
Boxes/flow/: API_REFERENCE.md  FRONTEND_INTEGRATION.md  README.md  api_server.py  main.py
Boxes/flow/api/: README.md  __init__.py  api_server.py
Boxes/flow/config/: .env.example  README.md  api.yaml  app.yaml  box_detector.yaml  defect_detector.yaml  firebase-service-account.example.json  firebase.example.yaml  firebase.yaml  firebase_config.json.example  mqtt.yaml  stream.yaml  webrtc.example.yaml  webrtc.yaml
Boxes/flow/configs/: api_server.yaml  backend.yaml  box_detector.yaml  defect_detector.yaml  mqtt.yaml
Boxes/flow/core/: README.md  backend_client.py  device_manager.py  firebase_client.py  model_loader.py  mqtt_client.py  pipeline.py  pipeline_diagnostics.py  pipeline_manager.py  session_manager.py  session_worker.py  state.py  stream.py  webrtc_track.py
Boxes/flow/detector/: yolo_detector.py
Boxes/flow/detectors/: README.md  detector.py
Boxes/flow/docs/: DIAGNOSTIC_REPORT.md  README.md  REFACTORING_SUMMARY.md  endpoints.md
Boxes/flow/models/: .gitkeep  README.md  detect_box_int8.onnx
Boxes/flow/requirements/: README.md  requirements.txt
Boxes/flow/scripts/: README.md  run_dev.sh
Boxes/flow/static/: index.html
Boxes/flow/utils/: README.md  geometry.py  visualizer.py
Boxes/training V1.1/box_train/: README.md
Boxes/training V1.1/defect_train/: README.md
GUI/: luncher.py
fine-tuning/: live.py  new_pipeline.py
fine-tuning/combine-fine-tuning/: test.py
fine-tuning/combine-fine-tuning/box-YOLO/: config.py  export_onnx.py  main.ipynb  (+4 more)
fine-tuning/fine-tuning-YOLO/: live_onnx.py  main.py
fine-tuning/fine-tuning-YOlO-old/: defect_detection_train.py  quantize.py
fine-tuning/fine-tuning-seg/: main.py
flow/: flow.py
flow/pipeline/: api_client.py  config.py  detector.py  helpers.py  main.py  tracker.py  utils.py
servers/: api_server.py
(+80 files in other folders)
